--- a/app/src/main/res/layout/movie_fragment.xml
+++ b/app/src/main/res/layout/movie_fragment.xml
@@ -49,7 +49,7 @@
             android:id="@+id/recycleTopFilter"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
-    <com.banquemisr.challenge05.util.NestedScrollPaginationView
+    <com.Movie.challenge.util.NestedScrollPaginationView
         android:layout_width="match_parent"
         android:layout_marginTop="10dp"
         android:id="@+id/paginationScrolling"
@@ -72,7 +72,7 @@
             android:layout_height="wrap_content"/>
         </LinearLayout>
 
-</com.banquemisr.challenge05.util.NestedScrollPaginationView>
+</com.Movie.challenge.util.NestedScrollPaginationView>
         <com.wang.avi.AVLoadingIndicatorView
             style="@style/AVLoadingIndicatorView.Large"
             android:layout_width="wrap_content"
