--- a/app/src/main/res/layout/one_item_movie.xml
+++ b/app/src/main/res/layout/one_item_movie.xml
@@ -1,59 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
-        app:layout_constraintTop_toTopOf="parent"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_width="match_parent"
-
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardOneItem"
-       app:cardCornerRadius="10dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="10dp"
+    app:cardElevation="0dp"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
     app:strokeColor="@color/gray_new"
-    app:strokeWidth="1dp"
-       app:cardElevation="0dp"
-        android:layout_height="wrap_content">
+    app:strokeWidth="1dp">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:paddingBottom="10dp"
+        android:layout_height="wrap_content"
         android:minHeight="240dp"
-        android:layout_height="wrap_content">
+        android:paddingBottom="10dp">
+
         <ImageView
             android:id="@+id/movieImage"
-            android:scaleType="fitXY"
-            app:srcCompat="@color/gray_new"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:layout_width="match_parent"
-            android:layout_height="190dp"/>
+            android:layout_height="190dp"
+            android:scaleType="fitXY"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@color/gray_new" />
+
+        <ImageView
+            android:id="@+id/favouriteUnFavourite"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="10dp"
+            android:layout_marginEnd="10dp"
+            app:srcCompat="@drawable/unfavourite"
+            app:layout_constraintBottom_toBottomOf="@+id/movieImage"
+            android:layout_width="35dp"
+            android:layout_height="35dp"/>
 
         <TextView
-            app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/name"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
-            app:layout_constraintEnd_toStartOf="@+id/yearOfProduction"
-            app:layout_constraintTop_toBottomOf="@+id/movieImage"
-            android:id="@+id/name"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:textSize="12sp"
-            android:ellipsize="end"
             android:layout_marginEnd="3dp"
-            android:maxLines="2"
+            android:ellipsize="end"
             android:gravity="center_vertical"
-            android:layout_width="0dp"
-            android:layout_height="0dp"/>
+            android:maxLines="2"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/yearOfProduction"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/movieImage" />
 
         <TextView
             android:id="@+id/yearOfProduction"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="10dp"
-            app:layout_constraintTop_toTopOf="@+id/name"
-            android:gravity="center_vertical"
-            app:layout_constraintBottom_toBottomOf="@+id/name"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"/>
+            android:layout_height="0dp"
+            android:layout_marginEnd="10dp"
+            android:gravity="center_vertical"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="@+id/name"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/name" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </com.google.android.material.card.MaterialCardView>
+</com.google.android.material.card.MaterialCardView>
 
